--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       }
     }
   </script>
-  <style>
+  <!-- <style>
     body, html { margin: 0; padding: 0; height: 60%; background-color: #1a1110; }
     #root { height: 100%; }
     .backface-hidden { backface-visibility: hidden; -webkit-backface-visibility: hidden; }
@@ -129,7 +129,7 @@
 .logo {
   height: 32px;
   width: auto;
-}
+} -->
 
 
 
