--- a/index.html
+++ b/index.html
@@ -42,10 +42,16 @@
     }
   </script>
   <style>
+
+    #root {
+  height: calc(100dvh - 130px);
+  overflow: hidden;
+}
+
    html, body {
   margin: 0;
   padding: 0;
-  min-height: 100%;
+   height: 100dvh;
   background-color: #1a1110;
   overflow-x: hidden;
 }
@@ -655,28 +661,29 @@ html, body {
     };
 
     // --- COMPONENT: App ---
-    const App = () => {
-      return (
-       <div className="min-h-[100dvh] bg-[#1a1110] flex flex-col items-center relative overflow-hidden">
+    // --- COMPONENT: App ---
+const App = () => {
+  return (
+    <div className="relative w-full h-full overflow-hidden bg-[#1a1110]">
+      {/* Background Ambience */}
+      <div className="absolute inset-0 z-0 opacity-30 pointer-events-none">
+        <div className="absolute inset-0 bg-[radial-gradient(circle_at_center,_var(--tw-gradient-stops))] from-yellow-900/40 via-[#1a1110] to-black"></div>
+        <div 
+          className="absolute inset-0 opacity-40" 
+          style={{
+            backgroundImage: `url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E...")`,
+            filter: 'sepia(100%) contrast(150%) hue-rotate(-30deg)'
+          }}
+        ></div>
+      </div>
 
-          {/* Background Ambience */}
-          <div className="fixed inset-0 z-0 opacity-30 pointer-events-none">
-            <div className="absolute inset-0 bg-[radial-gradient(circle_at_center,_var(--tw-gradient-stops))] from-yellow-900/40 via-[#1a1110] to-black"></div>
-            <div 
-              className="absolute inset-0 opacity-40" 
-              style={{
-                backgroundImage: `url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100' height='100' filter='url(%23noise)' opacity='0.5'/%3E%3C/svg%3E")`,
-                filter: 'sepia(100%) contrast(150%) hue-rotate(-30deg)'
-              }}
-            ></div>
-          </div>
+      <div className="relative z-10 w-full flex justify-center pt-4">
+        <MenuBook />
+      </div>
+    </div>
+  );
+};
 
-         <div className="z-10 w-full flex items-center justify-center">
-            <MenuBook />
-          </div>
-        </div>
-      );
-    };
 
     const container = document.getElementById("root");
     const root = createRoot(container);
