--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               { n: 'Vinho Tinto Seco', p: '8,00' }, { n: 'Vinho Tinto Suave', p: '8,00' },
               { n: 'Concha y Toro Tinto Meio Seco', p: '50,00' },
               { n: 'Periquita Tinto Meio Seco', p: '90,00' },
-              { n: 'Santa Helena Chardonnay', p: '52,00' }
+              { n: 'Santa Helena', p: '52,00' }
             ]
           },
           {
