--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet" href="index.css">
+
   <title>Cardápio Bar - AFPESP Peruíbe II</title>
   
   <script src="https://cdn.tailwindcss.com"></script>
@@ -12,164 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   
-  <style>
-    :root {
-      --gold: #c5a059;
-      --dark-brown: #3d241f;
-      --paper: #fdfbf7;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      width: 100%;
-      background-color: #1a1110;
-      overflow: hidden;
-      overscroll-behavior: none;
-      -webkit-tap-highlight-color: transparent;
-      display: flex;
-      flex-direction: column;
-    }
-
-    header.top-bar {
-      flex-shrink: 0;
-      height: 45px;
-      background: #000;
-      display: flex;
-      align-items: center;
-      padding: 0 15px;
-      z-index: 100;
-    }
-
-    section.title-bar {
-      flex-shrink: 0;
-      background-color: #333436;
-      padding: 6px 10px;
-      text-align: center;
-      z-index: 90;
-    }
-    section.title-bar h1 { color: #00ff00; font-size: 13px; font-weight: bold; text-transform: uppercase; margin: 0; }
-
-    #root {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 5px;
-      min-height: 0;
-      position: relative;
-    }
-
-    #book-container {
-      position: relative;
-      width: 98%;
-      max-width: 1000px;
-      height: 75vh;
-      margin: auto;
-      perspective: 2000px;
-      -webkit-perspective: 2000px;
-      opacity: 0; /* Começa invisível para evitar o flash de letras */
-      transition: opacity 0.4s ease-in-out;
-      background-color: transparent;
-    }
-
-    .transform-style-3d { 
-      transform-style: preserve-3d; 
-      -webkit-transform-style: preserve-3d;
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
-    
-    .sheet {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      width: 50%;
-      height: 100%;
-      transform-origin: left;
-      transition: transform 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
-      -webkit-transition: -webkit-transform 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
-      z-index: 10;
-      will-change: transform;
-    }
-
-    .sheet.flipped {
-      transform: rotateY(-180deg);
-      -webkit-transform: rotateY(-180deg);
-    }
-
-    .face {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      -webkit-backface-visibility: hidden;
-      background-color: var(--paper); /* Fundo sólido para evitar transparência */
-      transform: translateZ(0);
-      -webkit-transform: translateZ(0);
-    }
-
-    .bg-texture-paper { background-image: url('https://www.transparenttextures.com/patterns/cream-paper.png'); }
-    .bg-texture-leather { background-image: url('https://www.transparenttextures.com/patterns/leather.png'); }
-
-    .menu-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: baseline;
-      width: 100%;
-      gap: 3px;
-    }
-    .item-dots {
-      flex-grow: 1;
-      border-bottom: 2px dotted rgba(0, 0, 0, 0.1);
-      min-width: 4px;
-      margin-bottom: 3px;
-    }
-
-    .custom-scrollbar {
-      overflow-y: auto !important;
-      -webkit-overflow-scrolling: touch !important;
-      touch-action: pan-y !important;
-      height: 100%;
-      width: 100%;
-    }
-
-    .flip-zone {
-      position: absolute;
-      top: 0;
-      width: 40%;
-      height: 100%;
-      z-index: 5000;
-      cursor: pointer;
-    }
-    .flip-zone-right { right: 0; }
-    .flip-zone-left { left: 0; }
-
-    .font-serif { font-family: 'Cinzel', serif; }
-
-    @media (max-width: 640px) {
-      #book-container { height: 70vh; }
-      .p-page { padding: 12px !important; }
-      .p-header { padding: 15px 5px !important; }
-    }
-
-    @media (max-height: 550px) {
-      #book-container { height: 62vh; }
-      header.top-bar { height: 35px; }
-      section.title-bar { padding: 2px; }
-    }
-  </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.4"
-  }
-}
-</script>
+ 
 </head>
 <body>
 
