--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
    <link rel="stylesheet" href="index.css">
 
 
-  <title>Cardápio Bar - AFPESP Peruíbe II</title>
   
+  <title>Cardápio Bar - AFPESP Peruíbe II</title>
+  <scritp>
  
     const SVGS = {
       'chef-hat': `<svg width="70" height="70" viewBox="0 0 24 24" fill="var(--gold)" xmlns="http://www.w3.org/2000/svg">
