--- a/index.html
+++ b/index.html
@@ -3,13 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">
 
-
-  
   <title>Cardápio Bar - AFPESP Peruíbe II</title>
- 
- 
+  
+  
+<script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.4"
+  }
+}
+</script>
+</head>
+<body>
+
+  <header class="top-bar">
+    <div class="logo-container">
+      <img src="https://i.ibb.co/R4jn242d/afpesp-2.png" alt="AFPESP" />
+    </div>
+    <span>AFPESP Peruíbe II</span>
+  </header>
+
+  <section class="title-bar">
+    <h1>Cardápio Bar - AFPESP Peruíbe II</h1>
+  </section>
+
+  <div id="root">
+    <!-- Adicionado onclick para virar as páginas clicando no livro -->
+    <div id="book-container" onclick="handleBookClick(event)">
+      <div id="book" class="book-wrapper"></div>
+    </div>
+
+    <div class="controls">
+      <button class="btn-nav" onclick="prevPage()" aria-label="Voltar Página">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="15 18 9 12 15 6"></polyline></svg>
+      </button>
+      <span id="page-indicator" class="page-indicator">1 / 1</span>
+      <button class="btn-nav" onclick="nextPage()" aria-label="Próxima Página">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><polyline points="9 18 15 12 9 6"></polyline></svg>
+      </button>
+    </div>
+  </div>
+
+  <script>
     const SVGS = {
       'chef-hat': `<svg width="70" height="70" viewBox="0 0 24 24" fill="var(--gold)" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 3C10.5 3 9.1 3.6 8.1 4.6C7.1 5.6 6.5 7 6.5 8.5C6.5 9 6.6 9.5 6.7 9.9C5.1 10.4 4 11.8 4 13.5C4 15.4 5.6 17 7.5 17H16.5C18.4 17 20 15.4 20 13.5C20 11.8 18.9 10.4 17.3 9.9C17.4 9.5 17.5 9 17.5 8.5C17.5 7 16.9 5.6 15.9 4.6C14.9 3.6 13.5 3 12 3ZM7 18H17V20C17 20.6 16.6 21 16 21H8C7.4 21 7 20.6 7 20V18Z"/>
