--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <title>Cardápio Bar - AFPESP Peruíbe II</title>
   
   
-<script type="importmap">
+<!-- <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.4"
   }
 }
-</script>
+</script> -->
 </head>
 <body>
 
