--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       { 
         type: 'content', 
         sections: [
-          { title: 'Vinhos', icon: 'wine', items: [ { n: 'Vinho Tinto Seco', p: '8,00' }, { n: 'Vinho Tinto Suave', p: '8,00' }, { n: 'Concha y Toro Meio Seco', p: '50,00' }, { n: 'Periquita Meio Seco', p: '90,00' }, { n: 'Santa Helena Chardonnay', p: '52,00' } ] }
+          { title: 'Vinhos', icon: 'wine', items: [ { n: 'Vinho Tinto Seco', p: '8,00' }, { n: 'Vinho Tinto Suave', p: '8,00' }, { n: 'Concha y Toro Meio Seco', p: '50,00' }, { n: 'Periquita Meio Seco', p: '90,00' }, { n: 'Santa Helena', p: '52,00' } ] }
         ]
       },
       { type: 'image', url: 'https://images.unsplash.com/photo-1551024709-8f23befc6f87?q=80&w=1000', caption: 'Bebidas Geladas' },
@@ -113,7 +113,7 @@
             { n: 'Suco Melancia (Jarra)', p: '18,00' }
           ] },
           { title: 'Sucos (Outros)', icon: 'glass', items: [ 
-            { n: 'Suco Uva Integral (Copo)', p: '15,00' }, 
+            
             { n: 'Suco Uva Del Valle (Lata)', p: '8,00' }, 
             { n: 'Suco Pêssego Del Valle (Lata)', p: '8,00' } 
           ] }
@@ -123,7 +123,7 @@
       { 
         type: 'content', 
         sections: [
-          { title: 'Especiais', icon: 'coffee', items: [ { n: 'Copo de Leite Longo', p: '5,00' }, { n: 'Café Expresso Pequeno', p: '5,00' }, { n: 'Espanhola Sem Álcool', p: '8,00' }, { n: 'Especial Peruíbe II', p: '8,00' } ] },
+          { title: 'Especiais', icon: 'coffee', items: [ { n: 'Copo de Leite Longo', p: '5,00' }, { n: 'Café Expresso Pequeno', p: '5,00' },  { n: 'Especial Peruíbe II', p: '8,00' } ] },
           { title: 'Lanches', icon: 'food', items: [ { n: 'Misto Quente', p: '7,00' }, { n: 'Misto Frio', p: '10,00' }, { n: 'Queijo Quente', p: '10,00' } ] }
         ]
       },
